# Raft-Consensus

./: CMakeLists.txt  main.cpp  raft_node.cpp
bash-scripts/: election-stress-test.sh
src/: logger.h  main.cpp  network.cpp  network.h  raft_node.cpp  raft_node.h  randomizer.cpp  randomizer.h  rpc.h
tests/: chaos_test.cpp  election_test.cpp  log_replication_test.cpp  raft_node_test.cpp  raft_node_testing.h
